--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
   "devDependencies": {
     "husky": "^8.0.2",
     "jest": "^27.5.1",
+    "jest-date": "^1.1.4",
     "jest-extended": "^2.0.0",
     "pg-format": "^1.0.4"
   },
   "dependencies": {
     "dotenv": "^16.0.0",
-    "pg": "^8.7.3"
+    "express": "^4.18.2",
+    "pg": "^8.7.3",
+    "supertest": "^6.3.3"
   },
   "jest": {
     "setupFilesAfterEnv": [
