--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jest-date": "^1.1.4",
     "jest-extended": "^2.0.0",
     "pg-format": "^1.0.4",
+    "sorted": "^0.1.1",
     "supertest": "^6.3.3"
   },
   "dependencies": {
