--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "jest-date": "^1.1.4",
     "jest-extended": "^2.0.0",
     "pg-format": "^1.0.4",
+    "sorted": "^0.1.1",
     "supertest": "^6.3.3"
   },
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
     "pg": "^8.7.3",
+    "sort": "^0.0.3",
     "supertest": "^6.3.3"
   },
   "jest": {
