--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "supertest": "^6.3.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
     "fs.promises": "^0.1.2",
-    "pg-format": "^1.0.4",
     "pg": "^8.7.3",
+    "pg-format": "^1.0.4",
     "sort": "^0.0.3",
     "supertest": "^6.3.3"
   },
